Update .gitignore to ignore node_modules and logs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Node
-node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -29,3 +28,4 @@ tsconfig.tsbuildinfo
 Thumbs.db
 .vscode/
 .idea/
+node_modules
