Vite build fixed and Next.js removed

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ai-sdk/react": "latest",
-    "@google/genai": "latest",
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "latest",
     "@radix-ui/react-accordion": "latest",
@@ -40,9 +39,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@vercel/analytics": "latest",
     "ai": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,27 +50,21 @@
     "input-otp": "latest",
     "jiti": "latest",
     "less": "latest",
-    "lightningcss": "latest",
     "lucide-react": "^0.454.0",
-    "next": "16.0.6",
-    "next-themes": "latest",
     "path": "latest",
-    "react": "^19.2.0",
+    "react": "^19.2.1",
     "react-day-picker": "latest",
-    "react-dom": "latest",
+    "react-dom": "^19.2.1",
     "react-hook-form": "latest",
     "react-i18next": "^16.4.0",
     "react-resizable-panels": "latest",
     "recharts": "latest",
-    "sass": "latest",
-    "sass-embedded": "latest",
     "sonner": "latest",
     "stylus": "latest",
     "sugarss": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "terser": "latest",
-    "tsx": "latest",
     "tw-animate-css": "latest",
     "vaul": "latest",
     "yaml": "latest",
@@ -81,13 +72,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^22",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "postcss": "^8.5",
     "tailwindcss": "4.1.17",
     "typescript": "^5",
-    "vite": "^6.2.0"
+    "vite": "^5.2.0"
   }
 }
